about page on small devices fixed

--- a/css/my-style.css
+++ b/css/my-style.css
@@ -29,12 +29,16 @@ body {
 }
 
 h2 {
-    font-family: "Lobster";
+/*    font-family: "Lobster";*/
     margin-bottom: 50px;
 }
 
 .about {
     margin-top: 10px;
+}
+
+.about p {
+    font-size: 1.3em;
 }
 /******************************* Header & Footer **********************************/
 .navbar-default {
@@ -65,18 +69,16 @@ h2 {
 footer {
     height: 80px;
     background-color:#EEEEEE;
-    margin-top: 20px;
+    margin-top: 525px;
 }
 .copyright {
 	opacity: .8;
 	font-size: .9em;
-    margin-top: 5px;
+    position: fixed;
+    margin-top: 50px;
 }
 .social-icon {
     margin: 5px 2px;
-}
-.email {
-    margin-bottom: 10px;
 }
 
 a[href^="mailto:"] {
@@ -164,16 +166,33 @@ a[href^="mailto:"]:hover {
         margin-top: 50px;
   }
 
+@media (max-width: 768px) {
+    body {
+        background-color: aqua;
+    }
+    .profile-photo {
+        float: left;
+    }
+}
 
-@media (max-width: 480px) {
+@media (max-width: 550px) {
     body {
         background-color: red;
+    }
+
+    .quote {
+        margin-top: 15px;
+        margin-bottom: 5px;
+    }
+    .about {
+        margin-left: 5px;
     }
     .about h2 {
         display:none;
     }
     .profile-photo{
         width: 100%;
+        margin-bottom: 15px;
     }
     .email {
         display:none;
@@ -181,6 +200,8 @@ a[href^="mailto:"]:hover {
     .social-icon,
     .copyright {
         margin-top: 10px;
+        margin-right: 5px;
+        margin-left: 5px;
     }
     footer {
         height: 50px;
